vlib/v/checker/tests/cast_err.vv
fn test_bool_cast() {
	v := 3
	_ = bool(v)
	_ = bool(&v)
	_ = bool([2])
}

fn unknown() {
	_ = Foo(3)
}

fn int_literal_overflow() {
	_ = byte(100)
	_ = byte(1000)
	_ = byte(0xff)
	_ = byte(0x100)
	_ = byte(-1)
	_ = u16(10_000)
	_ = u16(100_000)
	_ = u16(-1)
	_ = u32(1_000_000_000)
	_ = u32(10_000_000_000)
	_ = u32(-1)
	_ = u64(1_000_000_000_000_000_000)
	_ = u64(10_000_000_000_000_000_000)
	_ = u64(-1)
}
